# upe-aci-safebot-chainlit

./: .dockerignore  .env.example  .gitignore  ARCHITECTURE.md  AUTHENTICATION.md  CHANGELOG.md  CONTRIBUTING.md  CUSTOMIZATION.md  DOCKER.md  Dockerfile  EXAMPLES.md  INSTALL_UBUNTU.md  LICENSE  LOCALE_FIX.md  QUICKSTART.md  QUICKSTART_ROLES.md  QUICK_FIX.md  README.md  ROLES.md  auth.py  chainlit.md  chainlit_app.py  docker-compose.yml  prompts.py  pyproject.toml
.chainlit/: config.toml
.chainlit/translations/: en-US.json  pt-BR.json
public/: custom.css
